# dnd-campaign

./: .gitignore  CNAME  README.md  data.json  demo.html  map.html
.github/workflows/: build_codex.yml  build_pages.yml
codex/: README.md  codex.py  layout.html  pyproject.toml  theme.toml
codex/src/codex/: extension.py  layout.html  navigation.html
codex/src/codex/directives/: map.py
codex/src/codex/secrets/: builder.py  secrets.py
codex/src/codex/static/css/: info.css  main.css  map.css  sidebar.css  vellum.css
codex/src/codex/static/js/: common.js  map.js  pan_zoom.js
codex/static/: main.css
codex/static/css/: info.css  main.css  map.css  style.css
codex/static/js/: common.js  map.js  pan_zoom.js
codex/templates/: fullscreen_map.html.jinja
css/: info.css  map.css  style.css
js/: common.js  map.js
public_source/: index.rst  map.rst  map_data.json
public_source/.doctrees/: environment.pickle  index.doctree  map.doctree
public_source/locations/: blightwood.rst  index.rst  plains.rst  valley_of_lem.rst
public_source/organisations/: church_of_brightwater.rst  index.rst
public_source/player_introduction/: backstories.rst  history_of_erran.rst  index.rst  knowledge_of_silverblight.rst  origins.rst  prologue.rst
source/: blightwood.html  conf.py  crimson_steps.html  index.rst  lembrow.html  lemford.html  map.rst  prologue.rst  valley_of_lem.html
source/_static/: map_of_erran_labels.json
source/locations/: blightwood.rst  valley_of_lem.rst
source/organisations/: church_of_brightwater.rst  (+2 more)
source_old/: blightwood.html  valley_of_lem.html
(+14 files in other folders)
